# design-patterns-in-modern-cpp

./: .pre-commit-config.yaml  README.md
SOLID-Design-Principles/SOLID-principles/: CMakeLists.txt  Creational.Creational.ISP.cpp  Creational.Creational.LSP.cpp  Creational.Creational.OCP.cpp  Creational.Creational.SRP.cpp
